[workspace]
members = [
    "homm3-archive",
    "homm3-gamestate",
    "homm3-battle",
]

[workspace.package]
version = "0.1.1"
authors = ["Gear Technologies"]
edition = "2021"
license = "MIT"

[workspace.dependencies]
gstd = { git = "https://github.com/gear-tech/gear.git", rev = "946ac47" }
primitive-types = { version = "0.12", default-features = false }
parity-scale-codec = { version = "3", default-features = false }
scale-info = { version = "2", default-features = false }
homm3-archive-io = { path = "homm3-archive/io" }
homm3-archive-state = { path = "homm3-archive/state" }
homm3-gamestate-io = { path = "homm3-gamestate/io" }
homm3-gamestate-state = { path = "homm3-gamestate/state" }
homm3-battle-io = { path = "homm3-battle/io" }
homm3-battle-state = { path = "homm3-battle/state" }
sp-core-hashing = { version = "8.0.0", default-features = false }
gmeta = { git = "https://github.com/gear-tech/gear", rev = "946ac47" }
gtest = { git = "https://github.com/gear-tech/gear.git", rev = "946ac47" }
gclient = { git = "https://github.com/gear-tech/gear.git", rev = "946ac47" }
tokio = "1"
hashbrown = "0.13"
gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git", rev = "946ac47" }

