[package]
name = "homm3-gamestate"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
gstd = { workspace = true, features = ["debug"] }
primitive-types.workspace = true
homm3-gamestate-io.workspace = true
hashbrown.workspace = true
gmeta.workspace = true

[dev-dependencies]
gtest.workspace = true
gclient.workspace = true
tokio.workspace = true
homm3-gamestate-state.workspace = true

[build-dependencies]
gear-wasm-builder.workspace = true
homm3-gamestate-io.workspace = true
gmeta.workspace = true

[features]
binary-vendor = []

