[package]
name = "homm3-gamestate-state"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
gstd.workspace = true
gmeta = { workspace = true, features = ["codegen"] }
homm3-gamestate-io.workspace = true

[build-dependencies]
gear-wasm-builder = { workspace = true, features = ["metawasm"] }

[features]
binary-vendor = []
default = ["binary-vendor"]
